<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".AddAppFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvAppInfo"
        android:gravity="center"
        android:text="@string/tvAppInfo"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etPtName"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPtName"
        android:hint="@string/etPtName"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppInfo"
        app:layout_constraintBottom_toTopOf="@id/etPtAge"  />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPtAge"
        android:hint="@string/etAge"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etPtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etApp_no"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etApp_no"
        android:hint="@string/etApp_no"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPtAge"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvGender"
        android:text="@string/tvGender"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etApp_no"
        app:layout_constraintBottom_toTopOf="@id/spGender"/>

    <Spinner
        android:id="@+id/spGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:entries="@array/Gender"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        app:layout_constraintBottom_toTopOf="@id/tvAppDate"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvAppDate"
        android:text="@string/tvAppDate"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spGender"
        app:layout_constraintBottom_toTopOf="@id/llAppDate"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llAppDate"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppDate"
        app:layout_constraintBottom_toTopOf="@id/etAppPhone_no" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAppDate1"
            android:gravity="center"
            android:orientation="horizontal"   >

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spDate"
                android:entries="@array/Date"
                android:padding="20dp"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spMonth"
                android:entries="@array/Month"
                android:padding="20dp"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spYear"
                android:entries="@array/Year"
                android:padding="20dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvAppTime"
            android:text="@string/tvAppTime"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:gravity="center" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llAppTime"
                android:gravity="center"
                android:orientation="horizontal"   >

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spHours"
                    android:entries="@array/Hours"
                    android:padding="20dp"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spMinutes"
                    android:entries="@array/Minutes"
                    android:padding="20dp"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spAm_Pm"
                    android:entries="@array/Am_Pm"
                    android:padding="20dp"
                    />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAppPhone_no"
        android:hint="@string/etPhone"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/llAppDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAppSave"
        android:layout_margin="30dp"
        android:text="@string/btnAppSave"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/etAppPhone_no" />


</androidx.constraintlayout.widget.ConstraintLayout>